--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/materialize-css": "^1.0.7",
+    "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.2",
-    "aurelia-animator-css": "^1.0.4"
+    "aurelia-materialize-bridge": "^1.5.2",
+    "aurelia-typed-observable-plugin": "^0.4.2",
+    "aurelia-validation": "^1.6.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "tslib": "^1.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
@@ -22,6 +28,7 @@
     "aurelia-fetch-client": "^1.8.2",
     "aurelia-http-client": "^1.3.1",
     "aurelia-loader-nodejs": "^1.0.1",
+    "aurelia-pagination": "^0.2.2",
     "aurelia-pal-nodejs": "^1.2.0",
     "aurelia-testing": "^1.0.0",
     "aurelia-tools": "^2.0.0",
